--- a/css/Game.css
+++ b/css/Game.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("./screenPicture.png");
+  background-image: url("../images/screenPicture.png");
   background-size: cover;
 }
 
