--- a/css/Game.css
+++ b/css/Game.css
@@ -7,7 +7,7 @@ body {
   font-family: monospace;
   font-weight: bold;
   width: 57%;
-  height: 77%;
+  height: 81%;
   position: absolute;
   color: white;
   background-color: black;
@@ -49,9 +49,13 @@ body {
   border-radius: 15px;
 }
 
+#startScreen h4 {
+  margin: 20% 80% 0 0;
+}
+
 .snakePixelTitle {
-  width: 18%;
-  margin: 17% 0 0 4%;
+  width: 17%;
+  margin: 16% 1% 0 0;
 }
 
 #startScreen h3 {
