--- a/css/Game.css
+++ b/css/Game.css
@@ -55,7 +55,7 @@ body {
 
 .snakePixelTitle {
   width: 17%;
-  margin: 16% 1% 0 0;
+  margin: 16% 0 0 4%;
 }
 
 #startScreen h3 {
@@ -101,7 +101,7 @@ canvas {
 
   #startScreen .snakePixelTitle {
     width: 18%;
-    margin: 16% 0 0 3%;
+    margin: 13% 0 0 0;
   }
 
   canvas {
