--- a/css/Game.css
+++ b/css/Game.css
@@ -1,22 +1,6 @@
 body {
   background-image: url("../images/screenPicture.png");
-  background-size: cover;
   margin: 0;
-}
-
-#gameOver {
-  font-family: monospace;
-  font-weight: bold;
-  width: 57%;
-  height: 77.5%;
-  position: absolute;
-  color: white;
-  background-color: black;
-  text-align: center;
-  font-size: 250%;
-  margin: 1% 0 0 21.4%;
-  display: none;
-  border-radius: 15px;
 }
 
 #gameOver h1 {
@@ -29,42 +13,10 @@ body {
   animation: blink 1.5s linear infinite alternate;
 }
 
-@keyframes blink{
+@keyframes blink {
   0%{opacity: 0;}
   50%{opacity: .5;}
   100%{opacity: 1;}
-  }
-
-#startScreen {
-  font-family: "Monospace";
-  font-weight: bold;
-  width: 56.6%;
-  height: 80%;
-  position: absolute;
-  color: white;
-  background-color: black;
-  text-align: center;
-  margin: 1% 0 0 21.6%;
-  display: block;
-  background-position: 5%;
-  background-image: url("../images/startScreenBackground.gif");
-  background-size: cover;
-  border-radius: 10px;
-}
-
-#Legend {
-  font-family: monospace;
-  font-weight: bold;
-  width: 57%;
-  height: 77.5%;
-  position: absolute;
-  color: white;
-  background-color: black;
-  text-align: left;
-  font-size: 200%;
-  margin: 1% 0 0 21.4%;
-  display: none;
-  border-radius: 15px;
 }
 
 .toggleSoundText {
@@ -122,12 +74,39 @@ body {
   0%{opacity: 0;}
   50%{opacity: .5;}
   100%{opacity: 1;}
-  }
+}
 
 .snakePictureGameOver {
   width: 65%;
   height: 45%;
   margin: auto 5% 0 0;
+}
+
+#startScreen {
+  font-family: "Monospace";
+  font-weight: bold;
+  position: absolute;
+  color: white;
+  background-color: black;
+  text-align: center;
+  display: block;
+  background-position: 5%;
+  background-image: url("../images/startScreenBackground.gif");
+  background-size: cover;
+  border-radius: 10px;
+}
+
+#legend {
+  font-family: monospace;
+  font-weight: bold;
+  position: absolute;
+  color: white;
+  background-color: black;
+  text-align: left;
+  font-size: 200%;
+  margin: 1% 0 0 21.4%;
+  display: none;
+  border-radius: 15px;
 }
 
 canvas {
@@ -137,18 +116,61 @@ canvas {
   border-radius: 15px;
 }
 
-@media (max-width: 1280px) {
+#gameOver {
+  font-family: monospace;
+  font-weight: bold;
+  width: 57%;
+  height: 77.5%;
+  position: absolute;
+  color: white;
+  background-color: black;
+  text-align: center;
+  font-size: 250%;
+  margin: 1% 0 0 21.4%;
+  display: none;
+  border-radius: 15px;
+}
 
+/* Mobile S */
+@media (max-width: 320px) {}
+/* Mobile M */
+@media (min-width: 375px) {}
+/* Mobile L */
+@media (min-width: 425px) {}
+/* Tablet */
+@media (min-width: 768px) {
   body {
-    background-image: url("../images/screenPicture.png");
-    background-size: cover;
     background-repeat: no-repeat;
+    background-size: auto;
   }
 
   #startScreen {
-      margin: 0 0 0 20.8%;
-      width: 57%;
-      height: 65%;
+    margin-left: 21.7%;
+    width: 58.3%;
+    height: 410px;
+  }
+
+  #legend {
+    margin: 0 0 0 22%;
+    width: 58%;
+    height: 410px;
+  }
+}
+/* Laptop */
+@media (min-width: 1024px) {
+  body {
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  #startScreen {
+    margin-left: 22.5%;
+    width: 560px;
+    height: 420px;
+  }
+
+  #startScreen h3 {
+    font-size: 1rem;
   }
 
   #startScreen .snakePixelTitle {
@@ -156,58 +178,146 @@ canvas {
     margin: 13% 0 0 0;
   }
 
-  #Legend {
-    margin: 0 0 0 20.8%;
+  #legend {
+    margin: 0 0 0 22%;
+    width: 56%;
+    height: 410px;
+  }
+
+  #legend > span {
+    font-size: 0.9rem;
+  }
+
+  .instructions {
+    margin: 5% 0 0 38%;
+    font-size: 1.3rem !important;
     width: 57%;
-    height: 65%;
+    height: 57%;
+  }
+
+  .circles {
+    margin: 6% 0 0 4%;
+    width: 10px;
+    height: 10px;
+  }
+
+  .toggleSoundText {
+    margin: 5% 15% 0 0;
+    font-size: 1rem;
+  }
+
+  .rKeyPower {
+    margin: 2.5% 11% 0 0;
+    font-size: 1rem;
+  }
+
+  .arrowKeys {
+    margin: 8% 0 0 2%;
+    width: 40%;
+  }
+
+  .changesText {
+    margin: 9% 0 0 18%;
   }
 
   canvas {
-    margin: 3% 0 0 21.5%;
+    margin: 3% 0 0 22.5%;
   }
 
   #gameOver {
     width: 57%;
-    height: 67%;
-    margin: 0 0 0 20.8%;
+    height: 420px;
+    margin: 0 0 0 21.5%;
   }
 
+  #gameOver h1 {
+    margin: 5% 0 3% 0;
+  }
+
+  .score {
+    font-size: 1.5rem;
+    margin: 0;
+  }
+  
+  #gameOver h3 {
+    font-size: 1.8rem;
+    margin: 3% 0 5% 0;
+  }
 }
-
-
-@media (max-width: 1440px) {
-
+/* Laptop L */
+@media (min-width: 1440px) {
   body {
-    background-image: url("../images/screenPicture.png");
     background-size: cover;
     background-repeat: no-repeat;
   }
 
   #startScreen {
-      margin: 0 0 0 20.8%;
-      width: 57%;
-      height: 65%; 
-  }
-
-  #startScreen .snakePixelTitle {
-    width: 18%;
-    margin: 16% 0 0 6%;
+    margin-left: 21.8%;
+    margin-top: 0;
+    width: 810px;
+    height: 570px;
   }
 
   canvas {
-    margin: 3% 0 0 21.5%;
+    margin: 4% 0 0 22%;
   }
 
-  #Legend {
-    margin: 0 0 0 20.8%;
-    width: 57%;
-    height: 65%; 
+  #legend {
+    margin: 0 0 0 22%;
+    width: 810px;
+    height: 570px;
+  }
+
+  #startScreen h3 {
+    font-size: 1.5rem;
+  }
+
+  #legend > span {
+    font-size: 1.3rem;
+  }
+
+  .instructions {
+    margin: 0 0 0 39% !important;
+    font-size: 1.7rem !important;
+  }
+
+  .circles {
+    width: 15px;
+    height: 15px;
+  }
+
+  .toggleSoundText {
+    margin: 5% 11% 0 0;
+  }
+
+  .arrowKeys {
+    margin: 15% 0 0 13%;
+    width: 30%;
+  }
+
+  .changesText {
+    margin: 12.3% 0 0 19.3%;
+  }
+
+  .rKeyPower {
+    margin: 2.3% 7.5% 0 0;
   }
 
   #gameOver {
-    width: 57%;
-    height: 67%;
-    margin: 0 0 0 20.8%;
+    width: 810px;
+    height: 570px;
+    margin: 0 0 0 22%;
+  }
+}
+/* 4K */
+@media (min-width: 2560px) {
+  body {
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 
+  #startScreen {
+      width: 56.8%;
+      height: 1050px;
+  }
 }
